<resources>
    <string name="app_name">Homework_6</string>
    <string name="btn_tap_here">Tap here</string>
    <string name="et_field1_hint">Field1</string>
    <string name="et_field2_hint">Field2</string>
    <string name="et_field3_hint">Field3</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
