<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zayatz.homework_6.MainActivity"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rabbit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/BtnTapHereStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_tap_here"/>

            <Button
                style="@style/BtnTapHereStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/btn_tap_here"/>

        </LinearLayout>

        <EditText
            style="@style/EtFieldAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_field1_hint"
            android:enabled="true"/>

        <EditText
            style="@style/EtFieldAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_field2_hint"
            android:enabled="true"/>

        <EditText
            style="@style/EtFieldAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_field3_hint"
            android:enabled="false"/>

        <View
            android:layout_width="@dimen/view_triangle_width"
            android:layout_height="@dimen/view_triangle_width"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/view_triangle_am"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_chat_message_background"
            android:text="@string/lorem_ipsum"/>

    </LinearLayout>
</ScrollView>